--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@
     padding: 40px;
     text-align: center;
     background: #13293d;
-    color: #fff;
+    color: #000000;
+    
     border-bottom:30px #879274;
   }
   
