--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,14 @@
   .timer-text {
     padding: 55px;
   }
+
+  .show {
+    display: flex;
+}
+
+.hide {
+    display: none;
+}
   
   @media screen and (max-width: 1183px) {
     main {
